--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,13 @@
+image: fedora:28
+
 test:
   script:
-  - apt-get update -qy
-  - apt-get install -y python-pip
+  - dnf update -y
+  - dnf install -y python{,3}-pip
   - python -V
   - pip install -r requirements.txt
-  - ./run_tests
+  - python2 ./run_tests
+
+  - python3 -V
+  - pip3 install -r requirements.txt
+  - python3 ./run_tests
