--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 coverage==4.5.1
+fancycompleter==0.8
 mpmath==1.0.0
 nose2==0.7.4
 numpy==1.14.3
+pdbpp==0.9.2
 pyparsing==2.2.0
 PyYAML==3.12
 six==1.11.0
 sympy==1.1.1
+wmctrl==0.3
