--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,8 @@ image: fedora:28
 
 test:
   script:
-  - dnf install -y python{,3}-pip
-  - dnf update -y python{,3}-pip
+  - dnf install -y python3-pip
+  - dnf update -y python3-pip
   # - python -V
   # - pip install -r requirements.txt
   # - python2 ./run_tests
