--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 coverage==4.5.1
 fancycompleter==0.8
+llvmlite==0.23.2
 mpmath==1.0.0
 nose2==0.7.4
+numba==0.38.1
 numpy==1.14.3
 pdbpp==0.9.2
+Pygments==2.2.0
 pyparsing==2.2.0
 PyYAML==3.12
 six==1.11.0
